<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/inicio"
            android:icon="@android:drawable/ic_menu_mapmode"
            android:title="@string/navigation_home" />
        <item
            android:id="@+id/buscarPeliculas"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/navigation_movies" />
        <item
            android:id="@+id/buscarSeries"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/navigation_series" />
        <!--<item-->
        <!--android:id="@+id/nav_manage"-->
        <!--android:icon="@drawable/ic_menu_manage"-->
        <!--android:title="Tools" />-->
    </group>

    <!--    <item android:title="Communicate">
            <menu>
                <item
                    android:id="@+id/nav_share"
                    android:icon="@drawable/ic_menu_share"
                    android:title="Share" />
                <item
                    android:id="@+id/nav_send"
                    android:icon="@drawable/ic_menu_send"
                    android:title="Send" />
            </menu>
        </item>-->

</menu>
