<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivityPelicula">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/movie_poster"
                android:layout_width="match_parent"
                android:layout_height="520dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="20dp"
                android:scaleType="centerCrop"
                android:textAlignment="center" />

            <ImageButton
                android:id="@+id/saveFavorite"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="12dp"
                android:background="@android:color/transparent"
                app:srcCompat="@android:drawable/btn_star_big_off" />

            <TextView
                android:id="@+id/tv_movie_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/tv_movie_title"
                android:textAlignment="center"
                android:textColor="@color/textColorSecondary"
                android:textSize="28sp" />

            <TextView
                android:id="@+id/movie_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="12dp"
                android:textAlignment="center"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tv_movie_year"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/tv_movie_year"
                android:textAlignment="center"
                android:textColor="@color/textColorSecondary"
                android:textSize="28sp" />

            <TextView
                android:id="@+id/movie_year"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="12dp"
                android:textAlignment="center"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tv_movie_runtime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/tv_movie_runtime"
                android:textAlignment="center"
                android:textColor="@color/textColorSecondary"
                android:textSize="28sp" />

            <TextView
                android:id="@+id/movie_runtime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="12dp"
                android:textAlignment="center"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tv_movie_genre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/tv_movie_genre"
                android:textAlignment="center"
                android:textColor="@color/textColorSecondary"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/movie_genre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="12dp"
                android:textAlignment="center"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tv_movie_director"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/tv_movie_director"
                android:textAlignment="center"
                android:textColor="@color/textColorSecondary"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/movie_director"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="12dp"
                android:textAlignment="center"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tv_movie_writer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/tv_movie_writer"
                android:textAlignment="center"
                android:textColor="@color/textColorSecondary"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/movie_writer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="12dp"
                android:textAlignment="center"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tv_movie_actors"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/tv_movie_actors"
                android:textAlignment="center"
                android:textColor="@color/textColorSecondary"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/movie_actors"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="12dp"
                android:textAlignment="center"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tv_movie_metascore"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/tv_movie_metascore"
                android:textAlignment="center"
                android:textColor="@color/textColorSecondary"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/movie_metascore"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="12dp"
                android:textAlignment="center"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tv_movie_awards"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/tv_movie_awards"
                android:textAlignment="center"
                android:textColor="@color/textColorSecondary"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/movie_awards"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="20dp"
                android:textAlignment="center"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tv_movie_plot"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/tv_movie_plot"
                android:textAlignment="center"
                android:textColor="@color/textColorSecondary"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/movie_plot"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="20dp"
                android:textAlignment="center"
                android:textSize="20sp" />
        </LinearLayout>

    </ScrollView>
</android.support.constraint.ConstraintLayout>